# 2022-BUAA-Compiler

./: .gitignore  CMakeLists.txt  README.md  设计文档.md
doc/: grammer-exp.md  memory-structure.drawio  stashed_code.cpp  期末上机.docx  集成开发环境安装说明.docx
doc/submit-doc/: testfile1_20373585_夏瑞斌_优化前中间代码.txt  testfile1_20373585_夏瑞斌_优化前目标代码.txt  优化文章.md  总结感想.md  设计文档.md
src/: catcode.h  errcode.h  generator.cpp  generator.h  irbuilder.cpp  irbuilder.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  settings.h  symbol.cpp  symbol.h  tools.cpp  tools.h
src/generator/: generator.cpp  generator.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h  symbol.h
src/parser/irbuilder/: irbuilder.cpp  irbuilder.h
src/tool/: tools.cpp  tools.h
test/: codeGen.py  compiler_tester.py  single_test.py  testfile.txt
test/2022-test-1105/A/: input13.txt  input23.txt
test/2022-test-1105/B/: input10.txt  input22.txt
test/self-test/: output2.txt  output3.txt  output4.txt  selfio.c  selfio.h  testfile.c  testfile1.c  testfile2.c  testfile2.txt  testfile3.c  testfile3.txt  testfile4.c  testfile4.txt
